# ibazel-repro

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  index.js  package.json  pnpm-lock.yaml
